--- a/template/sass/core/__code.scss
+++ b/template/sass/core/__code.scss
@@ -14,6 +14,10 @@
     font-family: 'Dancing Script';
 }
 
+.f-round{
+    font-family: 'HJ Gotham Round';
+}
+
 .seami-label{
     position: relative;
     display: flex;
