--- a/template/sass/core/__variable.scss
+++ b/template/sass/core/__variable.scss
@@ -22,6 +22,7 @@ $bg-g-cl: $g-cl;
 //color design
 $main-cl: #EA412C;
 $blue-cl: #145FAA;
+$yel-cl:#FFC107;
 $border-cl: #e1e1e1;
 $g-E5E5-cl:#E5E5E5;
 $g-C0C0-cl:#C0C0C0;
@@ -36,6 +37,7 @@ $cl-body: #000000;
 
 
 //break point
+$bk-1440: 1440px;
 $bk-1400: 1400px;
 $bk-1200: 1200px;
 $bk-1024: 1024px;
@@ -44,6 +46,7 @@ $bk-768: 768px;
 $bk-576: 576px;
 
 //break point - 1
+$bk-d-1440: $bk-1440 - 1;
 $bk-d-1400: $bk-1400 - 1;
 $bk-d-1200: $bk-1200 - 1;
 $bk-d-1024: $bk-1024 - 1;
