--- a/template/sass/style.scss
+++ b/template/sass/style.scss
@@ -13,6 +13,7 @@
 @import url(../js/libs/lightgallery/lightgallery.css);
 @import url(../font/font-awesome-4.7.0/css/font-awesome.min.css);
 @import url(../js/libs/fluidplayer/css/fluidplayer.css);
+@import url(../js/libs/masonry/css/masonry-docs.css);
 
 // Core
 @import './core/_variable';
@@ -47,6 +48,10 @@
 @import './page/_404';
 @import './page/_doingu-giaovien';
 @import './page/_dongngu-giaovien-detail';
+@import './page/_thanhqua-hocvien';
+@import './page/_phonghoc-thietbi';
+@import './page/_amnhac-nghethuat';
+@import './page/_seami-congchung';
 
 
 
