--- a/template/sass/page/__dongngu-giaovien-detail.scss
+++ b/template/sass/page/__dongngu-giaovien-detail.scss
@@ -86,11 +86,72 @@
             }
         }
     }
+
+    .teacher-box {
+        padding-left: 40px;
+
+        &:not(:first-child) {
+            margin-top: 25px;
+        }
+
+        .teacher-tt {
+            margin-bottom: 15px;
+        }
+
+        .teacher-cols {
+            display: flex;
+            margin: 0 -25px;
+        }
+
+        .teacher-col {
+            width: 50%;
+            padding: 0 25px;
+        }
+
+        .teacher-desc {
+            list-style-type: disc;
+            list-style-position: inside;
+            font-weight: 300;
+            @include lh(24, 14);
+        }
+
+        .teacher-tab {
+            border-collapse: separate;
+            border: 1px solid rgba($color: $b-cl, $alpha: .1);
+            border-radius: 4px;
+            width: 100%;
+            tr {
+                &:first-child{
+                    td {
+                        border-top: none;
+                    }
+                }
+            }
+
+            td {
+                border-top: 1px solid rgba($color: $b-cl, $alpha: .1);
+                &:not(:first-child) {
+                    border-left: 1px solid rgba($color: $b-cl, $alpha: .1);
+                }
+                padding: 13px 25px;
+
+                .teacher-star {
+                    color: $yel-cl;
+                    @include fz-16;
+                }
+            }
+        }
+    }
 }
 
 .white-popup-block {
     &.block-t-contact {
         padding: 25px;
+
+        .mfp-close {
+            top: 15px;
+            right: 15px;
+        }
     }
 }
 
@@ -194,6 +255,11 @@
             color: rgba($color: $b-cl, $alpha: .6);
             font-weight: 300;
         }
+
+        &:hover,
+        &:focus {
+            border-color: $main-cl;
+        }
     }
 
     .teacher-accept {
@@ -256,17 +322,19 @@
         align-items: center;
         justify-content: center;
         cursor: pointer;
-        &:hover{
+
+        &:hover {
             color: $main-cl;
             background-color: $w-cl;
-            img{
+
+            img {
                 filter: none;
             }
-            
-        }
-        
 
-        img{
+        }
+
+
+        img {
             filter: brightness(0) invert(1);
             margin-left: 13px;
             transition: all .3s ease;
