--- a/template/sass/page/__home.scss
+++ b/template/sass/page/__home.scss
@@ -356,7 +356,7 @@
 .slide-video-row {
     background-color: rgba($color: $blue-cl, $alpha: .05);
     padding: 100px 0 80px;
-
+   
     @include max-media($bk-d-1200) {
         padding: 60px 0;
     }
@@ -504,6 +504,89 @@
         transition: all .3s ease;
         display: block;
         @include line-clamp(3);
+    }
+
+    &.video-row-two{
+       padding: 64px 0 80px;
+
+        @include max-media($bk-d-1200) {
+            padding: 60px 0;
+        }
+    
+        @include max-media($bk-d-992) {
+            padding: 40px 0;
+        }
+
+        &:nth-child(2){
+            background-color: rgba($color: $main-cl, $alpha: .05);
+        }
+
+        
+        &:nth-child(4){
+           background-color: $g-F8F8-cl;
+        }
+    
+    }
+
+    &.col-video{
+        padding: 60px 0 100px;
+        @include max-media($bk-d-1200){
+            padding: 60px 0;
+        }
+        @include max-media($bk-d-992){
+            padding: 40px 0;
+        }
+        .video-head{
+            text-align: center;
+
+            .seami-label{
+                justify-content: center;
+            }
+        }
+
+        .column{
+            width: calc(100% / 3);
+            @include max-media($bk-d-1024){
+                width: calc(100% /2);
+            }
+            @include max-media($bk-d-768){
+                width: 100%;
+            }
+        }
+
+        .more-link{
+            text-align: center;
+            padding: 16px 0 14px;
+            border-radius: 99px;
+            background-color: $main-cl;
+            color: $w-cl;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-size: 12px;
+            font-weight: bold;
+            width: 170px;
+            height: 46px;
+            transition: all .3s ease;
+            border: 1px solid $main-cl;
+            margin: 45px auto 0;
+            @include max-media($bk-d-1200){
+                margin-top: 30px;
+            }
+            &:hover{
+                background-color: $w-cl;
+                color: $main-cl;
+                img{
+                    filter: none;
+                }
+            }
+            
+            img{
+                transition: all .3s ease;
+                filter: brightness(0) invert(1);
+                margin-left: 13px;
+            }
+        }
     }
 
 
